fixed the snap into when using humberger icon on mobile nav into smooth transition

--- a/src/Components/Navigation/Navigation.module.scss
+++ b/src/Components/Navigation/Navigation.module.scss
@@ -75,31 +75,42 @@ nav{
        justify-content: space-between;
        font-size: .8em;
    }
-
-   ul{
-       display: flex;
-       flex-direction: column;
-       list-style-type: none;
-       align-items: flex-start;
-       padding: 0;
-       width: 100%;
-       a{
-           @extend .AnchorTag;
-           display: block;
-       }
-
-       li{
-        padding: .5rem;
-        transition: all .5s ease-in;
-         }
-
-    li:hover{
-        margin-left: .7rem;
-        transform: scale(1.4);
-        }
-   }
 }
 
+.smallNavUl{
+
+ul{
+    -webkit-box-shadow: 0 4px 4px rgba(215, 64, 52, 0.4);
+    -moz-box-shadow: 0 4px 4px rgba(215, 64, 52, 0.4);
+    box-shadow: 0 4px 4px rgba(215, 64, 52, 0.4);
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    align-items: flex-start;
+    padding: 0 0 0 .6em;
+    width: 100%;
+    background: $nav-background;
+    position: fixed;
+    top: 40px;
+    z-index: 10;
+    transition: transform .5s ease-in, opacity .5s ease-in;
+    a{
+        @extend .AnchorTag;
+        display: block;
+    }
+
+    li{
+     padding: .5rem;
+     transition: all .5s ease-in;
+      }
+
+ li:hover{
+     margin-left: .7rem;
+     transform: scale(1.4);
+     }
+}
+
+}
 
 @media screen and (max-width:768px){
 
@@ -112,6 +123,9 @@ nav{
 @media screen and (min-width:769px){
 
    .SmallDevice{
+       display: none;
+   }
+   .smallNavUl{
        display: none;
    }
 
